[package]
name = "ironpress_native"
version = "0.3.0"
edition = "2021"
license = "MIT"
description = "Native Rust image compression engine for Flutter"

[lib]
name = "ironpress"
crate-type = ["cdylib", "staticlib"]

[dependencies]
image = { version = "0.25", default-features = false, features = ["jpeg", "png", "webp", "gif", "bmp", "tiff"] }
zune-jpeg = "0.5"
mozjpeg-rs = "0.5"
oxipng = { version = "9", default-features = false, features = ["parallel"] }
webp = "0.3"
rayon = "1.10"
libc = "0.2"
fast_image_resize = "5"
# AVIF encoding. asm feature deliberately disabled: rav1e's assembly requires
# nasm on every target and breaks Android/iOS cross-compilation in CI.
ravif = { version = "0.11", default-features = false, features = ["threading"] }
# Pixel type casts (&[u8] -> &[RGB8]) for the ravif API. Same version ravif uses.
rgb = "0.8"
# Lossy PNG palette quantization (NeuQuant). MIT-licensed, unlike imagequant (GPL).
color_quant = "1.1"
# Indexed PNG encoding for the lossy PNG path (already in the tree via image).
png = "0.17"
# zlib compression for the PNG iCCP chunk (ICC profile preservation).
flate2 = { version = "1", default-features = false, features = ["rust_backend"] }
# CRC-32 for hand-built PNG chunks (already in the tree via png).
crc32fast = "1"

[profile.release]
opt-level = 3            # Optimize for throughput
lto = "fat"              # Full LTO for best cross-crate inlining (mozjpeg+image+oxipng)
codegen-units = 1        # Better code generation at the cost of compile time
panic = "unwind"         # Required for catch_unwind (batch crash safety)
strip = true             # Strip symbols from binary

[profile.release.package."*"]
opt-level = 3
